# AI-ML

./: .gitignore  README.md
federated-tabular-health/: .gitignore  Makefile  README.md  REPORT.md  ROADMAP.md  pyproject.toml  pyvenv.cfg  requirements.txt
federated-tabular-health/Scripts/: activate  activate.bat
federated-tabular-health/configs/: default.yaml
federated-tabular-health/runs/fedavg_20250901-214513/: metrics.csv
federated-tabular-health/runs/fedavg_20250901-214650/: metrics.csv
federated-tabular-health/runs/fedavg_20250901-214912/: metrics.csv
federated-tabular-health/src/: client.py  client_flower.py  data_gen.py  dataset.py  helpers.py  metrics.py  model.py  run_baseline.py  run_federated.py  run_local_sim.py  server.flower.py  server.py  server_flower.py  utils.py
federated-tabular-health/tests/: test_dataset.py
federated-tabular-health/tools/: plot_metrics.py  summarize_runs.py
rag-notes-helper/: .gitignore  LICENSE  README.md  REPORT.md  ROADMAP.md  requirements.txt
rag-notes-helper/notes/: course_tips.txt  example.md  faq.md
rag-notes-helper/src/: api.py  build_index.py  run.py
rag-notes-helper/tests/: test_smoke.py
vision-fer2013-emotions/: .gitignore  README.md  REPORT.md  ROADMAP.md  make_fake_data.py  requirements.txt
vision-fer2013-emotions/src/: data.py  evaluate.py  explain.py  models.py  train.py
vision-fer2013-emotions/tools/: fer_to_folders.py  make_gradcam_samples.py
