[project]
name = "federated-tabular-health"
version = "0.1.0"
description = "Federated learning on synthetic tabular health data using Flower + PyTorch"
authors = [{name="James Sargsyan"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
